# app/Models/OrderItemModel.php
@@ -6,4 +6,10 @@ class OrderItemModel extends BaseModel
 {
     protected $table = 'order_items';
 
+    public function product()
+    {
+        return $this->belongsTo(ProductModel::class, 'product_id');
+    }
+
+
 }
