# routes/api.php
@@ -20,11 +20,12 @@ use Illuminate\Support\Facades\Route;
 
 Route::post('app-user/login', [AppUserController::class, 'login'])->name('login');
 Route::post('app-user/register', [AppUserController::class, 'register'])->name('register');
+Route::post('orders/calculate', [OrderController::class, 'calculateTotal'])->name('orders.calculate');
 
 Route::middleware(['jwt','jwt-auth'])->group(function () {
     Route::get('app-user/me', [AppUserController::class, 'getCurrentUser'])->name('me');
     Route::post('orders', [OrderController::class, 'store'])->name('orders.store');
-    Route::post('orders/calculate', [OrderController::class, 'calculateTotal'])->name('orders.calculate');
+
     Route::get('/orders', [OrderController::class, 'index']);
     Route::put('/orders/{id}/status', [OrderController::class, 'updateStatus']);
 });
